objects/Bank_DayEndBalanceRecords__c.object
<CustomObject>
    <fields>
        <fullName>BankEndDayBalance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BankEndDayBalance</label>
        <referenceTo>Bank_DayEndBalances__c</referenceTo>
        <relationshipLabel>Bank DayEndBalanceRecords</relationshipLabel>
        <relationshipName>Bank_DayEndBalanceRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>balance__c</fullName>
        <label>balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>datex__c</fullName>
        <label>datex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank DayEndBalanceRecords</label>
    <nameField>
        <label>Bank DayEndBalanceRecords Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank DayEndBalanceRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>